[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "app"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

alembic = "^1.13.2"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
fastapi = "^0.111.0"
pydantic = {extras = ["dotenv", "email"], version = "^2.8.0"}
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.31"
langchain-community = "^0.2.11"
langchain-text-splitters = "^0.2.2"
langchain-openai = "^0.1.20"
llama-index = "^0.10.62"
langchain = "^0.2.12"
llama-index-readers-notion = "^0.1.10"
psycopg2 = "^2.9.9"
qdrant-client = "^1.10.1"
langchain-qdrant = "^0.1.3"
llama-index-tools-exa = "0.1.4"
llama-index-core="0.10.68.post1"
llama-index-llms-openai="0.1.31"
llama-index-embeddings-openai="0.1.11"
llama-index-agent-openai="0.2.9"
markdown2="2.5.0"
notion-client="2.2.1"



[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
freezegun = "^1.5.1"
gevent = "^24.2.1"
httpx = "^0.27.0"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
# do not bump pytest-asyncio until https://github.com/pytest-dev/pytest-asyncio/issues/706 resolved
pytest-asyncio = "0.21.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.0"
types-passlib = "^1.7.7.20240327"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=100"
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["gevent"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
